--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     }
   ],
   "require": {
-    "knplabs/console-service-provider": "dev-master"
+    "knplabs/console-service-provider": "dev-master",
+    "symfony/finder": "^3.3"
   },
   "autoload": {
     "psr-0": {
