--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   ],
   "require": {
     "knplabs/console-service-provider": "dev-master",
+    "symfony/console": "3.4.14",
     "symfony/finder": "^3.3"
   },
   "autoload": {
